force-app/main/default/objects/Warehouse__c/Warehouse__c.object-meta.xml
<CustomObject>
    <description>Warehouse, hub, donor depot or partner location that can provide relief resources.</description>
    <label>Warehouse</label>
    <nameField>
        <label>Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>