force-app/main/default/objects/Warehouse__c/fields/Operating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Operating_Capacity__c</fullName>
    <label>Operating Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>